second update by linda

--- a/boot1/index.html
+++ b/boot1/index.html
@@ -396,9 +396,8 @@
 
                         </div>
                         </section>
-<!--Commented        -->
-<!--
-        <section class="bg-img position-relative my-5 text-center">
+
+        <section class="bg-img container-fluid position-relative my-5 text-center">
             <div class="overlay3 position-absolute w-100 h-100"></div>
             <div class="container pt-5">
                 <div class="row mb-5 pb-5">
@@ -528,7 +527,8 @@
             </div>
         
         </section>
-
+<!--Commented        -->
+<!--
         <section class="text-center my-5 our-works position-relative ">
           
            <h3 class="pt-5">Our Works</h3>
